fix issue where about me paragraph was off center on smaller screens

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -21,7 +21,6 @@
   display: flex;
   flex-direction: column-reverse;
   justify-content: space-between;
-  margin: 0 2%;
   font-size: 1.5rem;
 }
 
@@ -29,7 +28,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 50px;
 }
 
 .About .background {
@@ -70,28 +68,28 @@
 
 .About .introName {
   background: #ebb97a;
-  font-size: 2rem;
+  font-size: 1.7rem;
   color: white;
   padding: 20px;
   margin: 0;
-  width: 400px;
+  max-width: 350px;
 }
 
 .About .introParagraph {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 300;
   color: rgb(196, 194, 194);
 }
 
 .About .ImgContainer img {
   margin: 10px 40px;
-  width: 600px;
+  width: 500px;
   filter: grayscale(0.85);
   -webkit-filter: grayscale(0.85);
   order: 2;
 }
 
-@media only screen and (max-width: 1671px) {
+@media only screen and (max-width: 1500px) {
   .About {
     height: fit-content;
   }
@@ -137,7 +135,7 @@
 
   .About .introParagraph,
   .About .introHeading {
-    width: 60%;
+    max-width: 600px;
     margin: 10px auto;
     font-size: 1.2rem;
   }
